# hwinfo

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  code_style_check.sh  premake5.lua
.github/: FUNDING.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msys2.yml  build-windows-vs.yml  format-check.yml
assets/: drm.json
cmake/: hwinfoConfig.cmake.in  lfreist-hwinfoConfig.cmake.in
data/: CMakeLists.txt  embed.cmake
examples/: CMakeLists.txt  example.cpp  live_monitorMain.cpp  playground.cpp  system_infoMain.cpp
include/hwinfo/: PCIMapper.h  WMIwrapper.h  battery.h  bios.h  cpu.h  cpuid.h  disk.h  gpu.h  hwinfo.h  mainboard.h  network.h  os.h  platform.h  ram.h  system.h
include/hwinfo/apple/: battery.h  cpu.h  gpu.h  mainboard.h  os.h  ram.h
include/hwinfo/apple/utils/: filesystem.h
include/hwinfo/linux/: battery.h  cpu.h  disk.h  gpu.h  mainboard.h  os.h  ram.h
include/hwinfo/linux/utils/: filesystem.h
include/hwinfo/monitoring/: cpu.h  disk.h  ram.h
include/hwinfo/opencl/: device.h
include/hwinfo/unix/: cpu.h
include/hwinfo/utils/: PCIMapper.h  filesystem.h  pci.ids.h  stringutils.h  subprocess.h  sysctl.h  unit.h  utils.h  win_registry.h  wmi_wrapper.h
include/hwinfo/windows/: battery.h  cpu.h  disk.h  gpu.h  mainboard.h  os.h  ram.h
include/hwinfo/windows/utils/: WMIwrapper.h  filesystem.h  wmi_wrapper.h
scripts/: drm_to_json.py  feature-tests.shell  manage.py  pci_builder.py
src/: CMakeLists.txt  PCIMapper.cpp  battery.cpp  bios.cpp  config.cmake.in  cpu.cpp  disk.cpp  gpu.cpp  hwinfo.cpp  mainboard.cpp  network.cpp  os.cpp  ram.cpp  system.cpp
src/apple/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  gpu.mm  mainboard.cpp  network.cpp  os.cpp  ram.cpp
src/apple/monitoring/: disk.cpp
src/apple/utils/: filesystem.cpp
src/linux/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  os.cpp  ram.cpp
src/linux/monitoring/: cpu.cpp  disk.cpp
src/linux/utils/: filesystem.cpp
src/opencl/: CMakeLists.txt  device.cpp
src/windows/: battery.cpp  bios.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  network.cpp  os.cpp  ram.cpp
src/windows/monitoring/: cpu.cpp  disk.cpp
src/windows/utils/: filesystem.cpp  wmi_wrapper.cpp
test/: CMakeLists.txt  test.cpp
